<resources>

    <string name="error_no_network">Erreur réseau. Vérifier vos paramètres de connexion.</string>
    <string name="error_contact_support">Une erreur est survenue, veuillez contacter le support technique.</string>
    <string name="back">Retour</string>
    <string name="update_app">Mise à jour disponible</string>
    <string name="update_message">Une nouvelle version de l\'application est disponible. Veuillez la télécharger maintenant pour continuer</string>
    <string name="update">Mettre à jour</string>
    <string name="ok">OK</string>
    <string name="no_internet_connexion">Aucune connexion internet</string>

    //Login
    <string name="enter_login_message">Saisissez votre identifiant</string>
    <string name="enter_code_message">Saisissez votre code</string>
    <string name="enter_code_description">6 chiffres</string>
    <string name="login_empty_error">Le champ identifiant est vide</string>
    <string name="login_unsafe_error">Le format de l\'identifiant est incorrect</string>
    <string name="hint_login">Identifiant</string>
    <string name="confirm">Valider</string>
    <string name="erase">Effacer</string>
    <string name="cancel">Annuler</string>

    //Authentification
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="policy_confirmation">J\'ai lu et j\'accepte</string>
    <string name="hello_user_format">%s %s</string>
    <string name="last_login">Dernière connexion: %s à %s</string>
    <string name="welcome_to_yumi">Bienvenue dans Yumi !</string>
    <string name="bo_access">Accès application web</string>
    <string name="bo_two_factor_auth_none">La double authentification sur l\'application web est désactivée</string>
    <string name="bo_two_factor_auth_by_app">Génerer un code d\'accès à votre compte sur l\'application web</string>
    <string name="bo_two_factor_auth_by_mail">La double authentification sur l\'application web se fait par mail</string>
    <string name="access">Générer un code</string>
    <string name="empty_value">-</string>
    <string name="bo_sign_in_description">Veuillez utiliser ce code pour vous connecter à votre compte sur l\'application web</string>
    <string name="bo_code_expiration">Ce code expire dans:</string>
    <string name="empty_time">--:--</string>

    //Profile
    <string name="my_profile">Mon Profil</string>
    <string name="my_data">Mes informations</string>
    <string name="login">Login</string>
    <string name="surname">Nom</string>
    <string name="name">Prénom</string>
    <string name="service">Service</string>
    <string name="phone">Téléphone</string>
    <string name="my_accounts">Mes comptes gérés</string>
    <string name="users">Bénéficiaires</string>
    <string name="retailers">Fournisseurs</string>
    <string name="partners">Partenaires</string>
    <string name="contributors">Intervenants</string>
    <plurals name="account_stat_format">
        <item quantity="one">%s compte</item>
        <item quantity="other">%s comptes</item>
    </plurals>
    <string name="privacy_policy_underlined"><u>Politique de confidentialité</u></string>

    //Messages
    <string name="mail">Messagerie</string>
    <string name="sent">Envoyés</string>
    <string name="received">Reçus</string>
    <string name="no_received_message">Aucun message reçu</string>
    <string name="no_sent_message">Aucun message envoyé</string>
    <string name="recipient">Destinataire(s)</string>
    <string name="recipient_empty_error">Veuillez saisir un compte valide</string>
    <string name="mail_subject">Objet</string>
    <string name="subject_empty_error">L\'objet du message est vide</string>
    <string name="priority_information">Information</string>
    <string name="priority_warning">Avertissement</string>
    <string name="priority_important">Important</string>
    <string name="priority_critical">Critique</string>
    <string name="sent_at">Envoyé le %s à %s</string>
    <string name="mail_from">De:</string>
    <string name="mail_to">À:</string>
    <string name="new_mail">Nouveau message</string>
    <string name="reply">Répondre</string>
    <string name="mail_body">Rédiger un message</string>
    <string name="empty_mail_body_error">Le contenu du message est vide</string>
    <string name="delete">Suppression</string>
    <string name="delete_mail_confirmation">Voulez‑vous vraiment supprimer ce message ?</string>

    //Alert
    <string name="notifications">Notifications</string>
    <string name="no_notification">Aucune notification reçue</string>
    <string name="received_at">Reçu le %s à %s</string>

</resources>