<?xml version="1.0" encoding="utf-8"?>
<net.noliaware.yumi_agent.feature_profile.presentation.views.ProfileParentView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/header_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_icon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="25dp"
        app:cardElevation="16dp"
        app:cardPreventCornerOverlap="false">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_profile_on" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/omnes_semibold_regular"
        android:text="@string/my_profile"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <net.noliaware.yumi_agent.commun.presentation.views.ElevatedCardView
        android:id="@+id/content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:paddingVertical="15dp">

            <net.noliaware.yumi_agent.feature_profile.presentation.views.ProfileView
                android:id="@+id/profile_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/my_data_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/my_data"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:text="@string/login"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/surname_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:text="@string/surname"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/surname_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:text="@string/name"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/phone_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/phone"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/phone_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:text="@string/mail"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/service"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/separator_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_rounded_primary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/my_accounts_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/my_accounts"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/users_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/users"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/users_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/retailers_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/retailers"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/retailers_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/partners_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/partners"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/partners_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/contributors_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_regular"
                    android:gravity="end"
                    android:text="@string/contributors"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/contributors_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/empty_value"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />

            </net.noliaware.yumi_agent.feature_profile.presentation.views.ProfileView>
        </androidx.core.widget.NestedScrollView>
    </net.noliaware.yumi_agent.commun.presentation.views.ElevatedCardView>
</net.noliaware.yumi_agent.feature_profile.presentation.views.ProfileParentView>